# aestus

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  eslint.config.js  package.json  progress.md  rustfmt.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  package.json  tsconfig.json
apps/api/scripts/: broadcast.ts  migrate.ts  seed.ts
apps/api/src/: auth.ts  config.ts  event-mapper.ts  health.ts  index.ts  openapi.ts  realtime.ts  respond.ts  router.ts  store.ts
apps/api/src/routes/: analytics.ts  anomalies.ts  assets.ts  briefings.ts  data.ts  decisions.ts  journal.ts  market.ts  realtime.ts  research.ts  settings.ts
apps/api/test/: api.t015.test.ts  migrate.smoke.test.ts  realtime.test.ts
apps/web/: .env.example  README.md  next.config.mjs  package.json  tsconfig.json
apps/web/src/: index.ts
config/: symbol_map.toml
crates/event_model/: Cargo.toml
crates/event_model/src/: envelope.rs  health.rs  lib.rs  market.rs  streams.rs
crates/market_math/: Cargo.toml
crates/market_math/src/: lib.rs  prices.rs  timestamps.rs
crates/nats_publisher/: Cargo.toml
crates/nats_publisher/src/: heartbeat.rs  lib.rs
docs/: agent_handoff.md  anomaly_detection.md  context_packets.md  contracts_versioning.md  credentials.md  data_retention.md  dev_workflow.md  event_ordering.md  event_streams.md  exchange_capabilities.md  feature_formulas.md  glossary.md  llm_boundaries.md  local_dev.md  migrations.md  mvp_scope.md  non_goals.md  principles.md  provider_candidates.md
docs/adr/: ADR-001-stack.md  ADR-002-realtime-transport.md  README.md
docs/specs/: cockpit_agentic_build_todo.md  cockpit_spec.md  cockpit_ui_implementation.md
docs/specs/reference/: cockpit.html
fixtures/: README.md
fixtures/analogues/: analogues.json
fixtures/anomalies/: events.json
fixtures/assets/: identities.json
fixtures/briefings/: briefings.json
fixtures/context/: packets.json
fixtures/decisions/: decisions.json
fixtures/features/: snapshots.json
fixtures/journal/: trades.json
fixtures/macro/: events.json
fixtures/market/: bybit_raw.json  candles.json  normalized_events.json  raw_events.json  venue_quotes.json
fixtures/news/: items.json
fixtures/onchain/: events.json
fixtures/venues/: instruments.json  venues.json
infra/: .env.example  README.md  docker-compose.yml
infra/migrations/clickhouse/: 0001_raw_market_events.sql  0002_normalized_market_events.sql  0003_ohlcv_aggregates.sql  0004_feature_snapshots.sql  0005_anomaly_metrics.sql
infra/migrations/postgres/: 0001_assets.sql  0002_news.sql  0003_macro.sql  0004_onchain.sql  0005_anomalies.sql  0006_context_packets.sql  0007_briefings.sql  0008_decisions_journal.sql  0009_config.sql  0010_source_confidence.sql  0011_anomaly_taxonomy_extend.sql  0012_context_packet_snapshot.sql  0013_briefing_metadata.sql
infra/nats/: nats-server.conf
infra/postgres/: init.sql
infra/redis/: redis.conf
scripts/: infra-health.sh  loop-settings.json  loop.ps1  repair-prompt.md  reset-local.sh  reviewer-prompt.md  worker-prompt.md
services/anomaly/: Cargo.toml  README.md
services/anomaly/src/: anomaly.rs  config.rs  dedupe.rs  detect.rs  input.rs  lifecycle.rs  main.rs  persist.rs  publish.rs  registry.rs  rules.rs  severity.rs  state.rs
services/anomaly/src/detectors/: basis.rs  correlation.rs  funding.rs  liquidations.rs  macro_event.rs  mod.rs  news.rs  oi.rs  onchain.rs  volume.rs
services/context/: README.md  package.json
services/context/src/: builder.ts  config.ts  health.ts  levels.ts  main.ts  publish.ts  quality.ts  service.ts  store-postgres.ts  store.ts  venue.ts
services/context/test/: analogues.t008.test.ts  correlated.t003.test.ts  freshness.t009.test.ts  level-engine.t001.test.ts  level-engine.t002.test.ts  level-engine.t003.test.ts  level-engine.t004.test.ts  level-engine.t005.test.ts  level-engine.t006.test.ts  level-engine.t007.test.ts  level-engine.t008.test.ts  level-engine.t009.test.ts  level-engine.t010.test.ts  level-engine.t011.test.ts  level-engine.t012.test.ts  macro.t006.test.ts  market.t002.test.ts  news.t005.test.ts  onchain.t007.test.ts  packet.t013.test.ts  persistence.t010.test.ts  publish.t011.test.ts  quality.t012.test.ts  smoke.t001.test.ts  venue.t004.test.ts
services/features/: Cargo.toml  README.md
services/features/src/: basis.rs  breadth.rs  candle.rs  config.rs  correlation.rs  funding.rs  liquidations.rs  main.rs  oi.rs  persist.rs  publish.rs  returns.rs  snapshot.rs  state.rs  volatility.rs  volume.rs  window.rs
services/feeds/: Cargo.toml
services/feeds/src/: confidence.rs  config.rs  dedupe.rs  health.rs  main.rs  metrics.rs  persist.rs
services/feeds/src/calendar/: fixture.rs  mod.rs
services/feeds/src/news/: embeddings.rs  entity_extractor.rs  mod.rs  relevance.rs  rss.rs
services/feeds/src/onchain/: fixture.rs  mod.rs
services/ingestion/: .env.example  Cargo.toml  README.md
services/ingestion/src/: config.rs  feed_health.rs  hash.rs  health.rs  main.rs  metrics.rs  symbol_map.rs  validation.rs
services/ingestion/src/persist/: clickhouse.rs  clickhouse_query.rs  mod.rs  redis_store.rs
services/ingestion/src/provider/: mod.rs
services/ingestion/src/provider/binance/: mod.rs  parser.rs  reconnect.rs
services/ingestion/src/provider/bybit/: mod.rs
services/ingestion/src/provider/hyperliquid/: mod.rs
services/ingestion/src/provider/okx/: mod.rs
services/ingestion/tests/fixtures/: hyperliquid_raw.json  okx_raw.json
services/llm/: README.md  package.json  tsconfig.json
services/llm/src/: cache.ts  config.ts  draft.ts  generate.ts  health.ts  main.ts  prompt.ts  publish.ts  routing.ts  service.ts  store-postgres.ts  store.ts  validate.ts
services/llm/test/: cache.t012.test.ts  draft.t006.test.ts  fake-provider.t003.test.ts  level-injection.t007.test.ts  no-trade.t009.test.ts  persist.t010.test.ts  prompt.t005.test.ts  provider.t002.test.ts  publish.t011.test.ts  regression.t013.test.ts  routing.t004.test.ts  smoke.t001.test.ts  validate.t008.test.ts
(+55 files in other folders)
