[workspace]
resolver = "2"
members = [
    "services/ingestion",
    "services/features",
    "crates/event_model",
    "crates/market_math",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
