[workspace]
resolver = "2"
members = [
    "services/ingestion",
    "services/features",
    "services/feeds",
    "crates/event_model",
    "crates/market_math",
    "crates/nats_publisher",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.lints.rust]
unused_imports = "deny"
dead_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = { level = "allow", priority = -1 }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
rust_decimal = { version = "1", features = ["serde-float"] }
async-nats = "0.38"
async-trait = "0.1"
futures = "0.3"
