[package]
name = "nats_publisher"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
event_model = { path = "../event_model" }
async-nats = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
