[package]
name = "ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
event_model = { path = "../../crates/event_model" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
